--- a/Prototipo_Base_Ideas-0.1
+++ b/Prototipo_Base_Ideas-0.1
@@ -9,6 +9,8 @@ Datos de viaje de empresa
 Datos de horarios de buses / aviones ... etc.
 
 ----------------------------------------
+Logo-Interfaz grafica 
+----------------------------------------
 Manejo de aplicacion
 -Super Usuario (PC)
 -Usuarios (apk)
